make gratuitious edit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </nav>        
 
-      <h1>The Case of the Italian Olives</h1>
+      <h1>The Case of the Italian Olives!</h1>
 
       <p>This is the home page</p>
 
